<resources>
    <string name="app_name">Mosquito Manager</string>

    <string name="catch_basin_surveillance">Catch Basin Surveillance</string>
    <string name="login">login</string>
    <string name="sign_up">Sign Up</string>

    <string name="id">id</string>
    <string name="community">Community</string>
    <string name="cb_address">CB Address</string>
    <string name="stage_of_dev">Stage of Dev</string>
    <string name="date">Date</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="num_of_larvae"># of Larvae</string>
    <string name="stage_of_development">Stage of Development</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <string name="get_location_data">Get Location Data</string>
    <string name="update_location_info">Show Coordinates</string>

    <!-- Content Descriptions -->
    <string name="cd_login_img">Main image in the login screen</string>
    <string name="cd_play_video_btn">Play button for YouTube video</string>
    <string name="cd_sign_up_img">Main image in the sign up screen</string>

    <!-- Error Msgs -->
    <string name="err_invalid_email">Invalid Email</string>
    <string name="err_invalid_password">Invalid Password</string>
    <string name="err_msg">Error: %s</string>
    <string name="err_required">Required</string>
    <string name="err_required_email_format">Email Format Required</string>
    <string name="err_required_password_min">Minimum 6 Characters Required</string>
    <string name="err_exercise_exists">Exercise Already Added</string>

    <!-- Success Msgs -->
    <string name="sign_up_success">Sign Up Success!</string>

    <!-- EditText Hints -->
    <string name="hint_email"><i>Email</i></string>
    <string name="hint_password"><i>Password</i></string>
    <string name="hint_search_workouts"><i>Search Workouts</i></string>
    <string name="hint_workout_name"><i>Workout Name</i></string>
    <string name="hint_exercise_name"><i>Exercise Name</i></string>

    <!-- Phrases -->
    <string name="txt_no_account">Don\'t have an account?\ </string>
    <string name="txt_sign_up_here">Sign up here!</string>
    <string name="txt_yes_account">Already have an account?\ </string>
    <string name="txt_login_here">Login here!</string>
    <string name="txt_email_registered">Email is already registered</string>
    <string name="txt_network_needed">Internet connection required</string>
    <string name="txt_logged_in">Logged in with %s</string>

    <string name="zero">0</string>
    <string name="add_data">Add Data</string>
    <string name="comma">,</string>
    <string name="catch_basin">Catch Basin</string>
    <string name="view_data">View Data</string>
    <string name="recorded_catch_basins">Recorded Catch Basins</string>
    <string name="create_spreadsheet">Create Spreadsheet</string>
    <string name="logout">Logout</string>
    <string name="err_ext_storage_permission">Need storage permission to create CSV data file</string>


</resources>
