<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".CatchBasin">

    <include
        android:id="@+id/toolbar"
        layout="@layout/part_titlebar" />

    <EditText
        android:id="@+id/et_samplingDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:hint="@string/date"
        android:inputType="date"/>

    <EditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:hint="@string/city"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:hint="@string/address"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_lat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:hint="@string/latitude"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/et_lon"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:hint="@string/longitude"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/et_numLarvae"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:inputType="number"
        android:text="@string/zero"
        android:hint="@string/num_of_larvae"/>

    <Spinner
        android:id="@+id/spr_devStage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:inputType="date"
        android:textColor="@color/colorText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <include
            android:id="@+id/btn_showCoords"
            android:text="@string/update_location_info"
            layout="@layout/part_button" />

        <include
            android:id="@+id/btn_addData"
            layout="@layout/part_button"
            android:text="@string/add_data"/>
    </LinearLayout>
</LinearLayout>